# apidb

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  License.txt  Makefile.am  README  TODO  configure.ac  linux.cbp  mingw.cbp
cmake/Modules/: CUnitConfig.cmake  MySQLConfig.cmake  octetos-core-ccConfig.cmake  octetos-coreConfig.cmake  octetos-db-mysql-ccConfig.cmake  octetos-db-mysqlConfig.cmake  octetos-db-postgresqlConfig.cmake  tarConfig.cmake  toolkit-clientdb-c++-mysqlConfig.cmake  toolkit-clientdb-c++Config.cmake  toolkit-clientdbConfig.cmake  toolkit-common-c++Config.cmake  toolkit-commonConfig.cmake
cmake/Modules/toolkit/: common-c++Config.cmake  myc++Config.cmake  mysql-c++Config.cmake  octetos-toolkit-clientdb-myc++Config.cmake  octetos-toolkit-common-c++Config.cmake
doc/: Requisitos.ods  apidb.odt  bitacora-develop.odt  querys.sql
src/: Application-CaptureFuntion.cpp  Application-CaptureParameter.cpp  Application-CaptureTable.cpp  Application-TreeView.cpp  Application-gtk3.cpp  Application-gtk3.hpp  Application.cpp  Application.hpp  CMakeCache.txt  CMakeLists.txt  ConfigureProject-compress-tar.cpp  ConfigureProject-compress-z.cpp  ConfigureProject-xml.cpp  ConfigureProject.cpp  ConfigureProject.hpp  ConfigureProjectRead_v0.cpp  ConfigureProjectRead_v1.cpp  ConfigureProjectRead_v2.cpp  ConfigureProjectRead_v3.cpp  ConfigureProjectRead_v4.cpp  Errors.cpp  Errors.hpp  INSTALL  InputMM.cc  InputMaria.cc  InputSQL.cc  Inputs.cc  Inputs.hh  License.txt  Makefile  Makefile.am  Outputs.hh  README  TODO  a.out  analyzer-mysql.cpp  analyzer-mysql.hpp  analyzer-postgresql.cpp  analyzer-postgresql.hpp  analyzer.cpp  (+76 more)
src/.kdev4/: src.kdev4
src/build-my/apidb/: developing.cpp
src/build-myc++/sis/: developing.cpp
src/cmake.modules/: apidb-generator-sqlConfig.cmake  toolkit-clientdbConfig.cmake  toolkit-commonConfig.cmake
src/compiler-sql/: CMakeLists.txt  driver.cpp  driver.hpp  lexer.l  main.cpp  parser.yy  scanner.hpp
src/examples/: README  capture_v3.cpp  coredb-test.apidb  coredb.apidb  createProy_v3.cpp  db.sql  developing.cpp  developing.php  developing3.cpp
src/generator-sql/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  clean.sh  cmake_install.cmake  developing  driver.cpp  driver.hpp  lexer.l  lexer.yy.cc  main.cpp  mysql.cpp  parser.tab.cc  parser.tab.hh  parser.yy  scanner.hpp
src/generator-sql/.kdev4/: generator-sql.kdev4
src/generator-sql/cmake.modules/: toolkit-clientdbConfig.cmake  toolkit-commonConfig.cmake
src/generator-sql/test/: sqlType.txt
src/mariadb-reader-c++/: CMakeLists.txt  analyzer-mariadb.cpp  analyzer.cpp  analyzer.hpp  lexer.l  linux.cbp  parser.yy  scanner.cpp  scanner.hpp
src/mysql-reader-c++/: CMakeLists.txt  analyzer-mysql.cpp  analyzer-mysql.cpp-old  analyzer.cpp  analyzer.hpp  driver.cpp  driver.hpp  lexer.l  parser.yy
src/postgresql-reader-c++/: CMakeLists.txt  analyzer-postgresql.cpp  analyzer.cpp  analyzer.hpp  lexer.l  parser.yy  scanner.cpp  scanner.hpp
src/test/: CMakeLists.txt  clean.sh  config.h  developing.cpp
src/tests/: CMakeLists.txt  ConfigureProject.cpp  Driver.cpp  apidb-build-test  defines.hpp  developing.cpp  developing3.cpp  developing4.cpp  developing5-mariadb.cpp  developing5-mysql.cpp  developing5-postgresql.cpp  muposys-v5.apidb  sandbox-build.cpp  sandbox-generator.cpp  sandbox-inserts.cpp  sandbox-operations.cpp  sandbox-queries.cpp  sandbox-siud.cpp  sandbox-suid.php  sandbox-update.cpp  sysappv1-alpha.apidb  sysappv2-alpha.apìdb  sysappv20-alpha.apidb  sysappv30-alpha.apidb  sysappv4-alpha.apidb  v1.cpp  v2.cpp  v3.cpp  v4.cpp  v5.cpp
test/: alpha.mwb
tests/: Makefile.am  main.cc  v6.cc  v6.hh
