
check_PROGRAMS = v6
TESTS= $(check_PROGRAMS)

LIB = $(TDD_LIBS)
FLAGS = $(OCTETOS_CFLAGS) $(OCTETOS_DB_CFLAGS) $(TDD_CFLAGS)
if OCTETOS_APIDB_ENABLE_TDD
FLAGS += -DOCTETOS_APIDB_ENABLE_TDD -DOCTETOS_APIDB_ENABLE_TDD_V6 -DOCTETOS_APIDB_ENABLE_TDD_V5
endif
if DATABASE_ENGINE_MARIA
FLAGS += -DDATABASE_ENGINE_MARIA -DAPIDB_MARIADB
LIB += $(APIDB_MARIA_LIBS)
endif
if OCTETOS_DB_MEDIUMWORD
FLAGS += -DOCTETOS_DB_MEDIUMWORD
endif
if OCTETOS_APIDB_ARCH_LINUX_ARCH
FLAGS += -DOCTETOS_APIDB_ARCH_LINUX_ARCH -DLINUX_ARCH
endif

v6_LDFLAGS =
v6_LDADD = $(LIB) $(top_builddir)/src/libapidb.la
v6_CXXFLAGS = $(FLAGS) -I$(top_srcdir)/src
v6_SOURCES = main.cc v6.cc
